--- a/mmbouillon/config.yml
+++ b/mmbouillon/config.yml
@@ -30,3 +30,6 @@ PATHS:
   # Paths to JavaScript entry points for webpack to bundle modules
   entries:
     - "src/assets/js/app.js"
+  # Paths to Data JSON files
+  data:
+    - "src/data/*.json"
